--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -8,32 +8,35 @@ $colors: (
   background-1: rgb(5, 42, 255),
   background-2: rgb(0, 0, 0),
   con-desc-1: rgb(51, 19, 0),
-  con-bg-1: rgb(226, 129, 248),
+  con-bg-1: rgb(245, 202, 255),
   con-name-1: rgb(71, 0, 42),
   header-bg-1: rgb(255, 231, 245),
   header-text-1: rgb(71, 0, 42),
   pb-header-bg-1: rgb(243, 189, 255),
   pb-header-text-1: rgb(255, 235, 241),
-  pb-main-bg-1: rgb(201, 93, 124),
+  pb-main-bg-1: rgb(255, 241, 245),
   pb-aside-bg-1: rgb(251, 253, 255),
   pb-nav-bg-1: rgb(255, 255, 255),
   pb-footer-bg-1: rgb(255, 255, 255),
-  pb-main-bg-xl-1: rgb(255, 198, 198),
+  pb-main-bg-xl-1: rgb(255, 241, 241),
   pb-main-tab-bg-1: rgb(48, 2, 28),
   pb-main-tab-bg-2: rgb(92, 2, 54),
   pb-main-tab-text-1: rgb(255, 228, 244),
   pb-main-tab-text-2: rgb(255, 255, 255),
   res-box-text-1: rgb(52, 24, 155),
-  layout-one-bg-1: rgb(221, 168, 168),
-  body-bg-1: rgb(255, 225, 225),
+  layout-one-bg-1: rgb(255, 230, 230),
+  body-bg-1: rgb(255, 236, 236),
   pb-main-body-text-1: rgb(233, 49, 24),
   pb-main-body-text-2: rgb(59, 16, 231),
   pb-main-body-text-3: rgb(24, 121, 53),
   pb-main-body-text-4: rgb(97, 102, 47),
+  test-wild-1: rgb(255, 44, 227),
+  test-transparent-1: rgba(255, 44, 227, 0.1),
 );
 
 $sizes: (
   padding-5px: 5px,
+  header-border-1: 2px bottom solid rgb(71, 0, 42),
   pb-border-1: 1px solid rgb(71, 51, 51),
   pb-border-2: 2px dashed rgb(255, 255, 255),
   pb-border-3: 3px solid rgb(255, 255, 255),
