--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -36,6 +36,9 @@ $colors: (
 
 $sizes: (
   padding-5px: 5px,
+  padding-10px: 10px,
+  padding-15px: 15px,
+  padding-20px: 25px,
   header-border-1: 2px bottom solid rgb(71, 0, 42),
   pb-border-1: 1px solid rgb(71, 51, 51),
   pb-border-2: 2px dashed rgb(255, 255, 255),
