--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -1,37 +1,55 @@
+$primaryColor1: #d000ff;
+$primaryColor2: #ffd000;
+$primaryColor3: #00ffd0;
+$primaryColor1light: #f0b0ff;
+$primaryColor2light: #fff0b0;
+$primaryColor3light: #b0fff0;
+$primaryColor1dark: #600076;
+$primaryColor2dark: #766000;
+$primaryColor3dark: #007660;
+$secondaryColor1: #ffffff;
+$secondaryColor2: #000000;
+$secondaryColor3: #3f3f3f;
+$secondaryColor4: #808080;
+$secondaryColor5: #dfdfdf;
+
+// COLOR SELECTIONS
 $colors: (
-  primary-1: rgb(134, 133, 78),
-  primary-2: rgb(0, 0, 0),
-  secondary-1: rgb(106, 250, 10),
-  secondary-2: rgb(0, 0, 0),
-  accent-1: rgb(4, 255, 234),
-  accent-2: rgb(0, 0, 0),
-  background-1: rgb(5, 42, 255),
-  background-2: rgb(0, 0, 0),
-  con-desc-1: rgb(51, 19, 0),
-  con-bg-1: rgb(245, 202, 255),
-  con-name-1: rgb(71, 0, 42),
-  header-bg-1: rgb(255, 231, 245),
-  header-text-1: rgb(71, 0, 42),
-  pb-header-bg-1: rgb(243, 189, 255),
-  pb-header-text-1: rgb(255, 235, 241),
-  pb-main-bg-1: rgb(255, 241, 245),
-  pb-aside-bg-1: rgb(251, 253, 255),
-  pb-nav-bg-1: rgb(255, 255, 255),
-  pb-footer-bg-1: rgb(255, 255, 255),
-  pb-main-bg-xl-1: rgb(255, 241, 241),
-  pb-main-tab-bg-1: rgb(48, 2, 28),
-  pb-main-tab-bg-2: rgb(92, 2, 54),
-  pb-main-tab-text-1: rgb(255, 228, 244),
-  pb-main-tab-text-2: rgb(255, 255, 255),
-  res-box-text-1: rgb(52, 24, 155),
-  layout-one-bg-1: rgb(255, 230, 230),
-  body-bg-1: rgb(255, 236, 236),
-  pb-main-body-text-1: rgb(233, 49, 24),
-  pb-main-body-text-2: rgb(59, 16, 231),
-  pb-main-body-text-3: rgb(24, 121, 53),
-  pb-main-body-text-4: rgb(97, 102, 47),
-  test-wild-1: rgb(255, 44, 227),
-  test-transparent-1: rgba(255, 44, 227, 0.1),
+  // layout
+  layout-one-bg-1: $secondaryColor1,
+  // pollbox
+  pb-header-text-1: $primaryColor1,
+  pb-main-bg-1: $secondaryColor1,
+  pb-aside-bg-1: $secondaryColor1,
+  pb-main-tab-bg-1: $secondaryColor2,
+  pb-main-tab-bg-2: $secondaryColor2,
+  pb-main-tab-text-1: $secondaryColor1,
+  pb-main-tab-text-2: $secondaryColor1,
+  pb-main-body-text-1: secondaryColor2,
+  pb-main-body-text-2: secondaryColor2,
+  pb-main-body-text-3: secondaryColor2,
+  pb-main-body-text-4: secondaryColor2,
+  // ???
+  /*
+  pb-nav-bg-1: rgb(212, 203, 66),
+  pb-footer-bg-1: rgb(122, 243, 9),
+  pb-main-bg-xl-1: rgb(255, 49, 49),
+  */
+    // console
+  con-desc-1: $primaryColor1,
+  con-bg-1: $secondaryColor1,
+  con-name-1: $primaryColor1,
+  // header
+  header-bg-1: $secondaryColor1,
+  header-text-1: $primaryColor1,
+  // results box
+  res-box-text-1: $primaryColor1,
+  // test colors
+  test-wild-1: rgb(255, 0, 221),
+  test-wild-2: rgb(0, 255, 34),
+  test-transparent-1: #00ff2210,
+  // other
+  base-body-bg-1: $secondaryColor1
 );
 
 $sizes: (
@@ -39,13 +57,13 @@ $sizes: (
   padding-10px: 10px,
   padding-15px: 15px,
   padding-20px: 25px,
-  header-border-1: 2px bottom solid rgb(71, 0, 42),
-  pb-border-1: 1px solid rgb(71, 51, 51),
-  pb-border-2: 2px dashed rgb(255, 255, 255),
-  pb-border-3: 3px solid rgb(255, 255, 255),
+  header-border-1: 20px bottom solid $primaryColor1,
+  pb-border-1: 1px solid $primaryColor1,
+  pb-border-2: 2px dashed $primaryColor1,
+  pb-border-3: 3px solid $primaryColor1,
   pb-header-text-1: italic bold 20px Georgia,
-  console-border-1: 1px solid rgb(172, 44, 44),
-  resultbox-border-1: 1px solid rgb(172, 44, 44),
+  console-border-1: 1px solid $primaryColor1,
+  resultbox-border-1: 1px solid $primaryColor1,
   pb-container-width-small: 630px,
 );
 
