--- a/src/css/main.css
+++ b/src/css/main.css
@@ -198,11 +198,19 @@ body {
   border: 1px solid #d000ff;
   color: #000000;
   padding: 15px;
+  /*
+  p {
+    background-color: black;
+    color: white;
+    width: fit-content;
+  }
+  */
 }
 
 .resultbox-container .resultbox-graph-container {
   border: 1px solid #d000ff;
   color: #000000;
   padding: 10px;
+  background-color: #f0b0ff;
 }
 /*# sourceMappingURL=main.css.map */
