--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -40,6 +40,7 @@ $colors: (
   // results box
   res-box-text-1: $secondaryColor2,
   res-box-text-2: $secondaryColor2,
+  res-box-bg-1: $primaryColor1light,
   // test colors
   test-wild-1: rgb(255, 0, 221),
   test-wild-2: rgb(0, 255, 34),
