--- a/src/scss/5-modules/_resultsComponent.scss
+++ b/src/scss/5-modules/_resultsComponent.scss
@@ -3,9 +3,18 @@
   color: getColor(res-box-text-2);
   padding: getSize(padding-15px);
 
+  /*
+  p {
+    background-color: black;
+    color: white;
+    width: fit-content;
+  }
+  */
+
   .resultbox-graph-container {
     border: getSize(resultbox-border-1);
     color: getColor(res-box-text-1);
     padding: getSize(padding-10px);
+    background-color: getColor(res-box-bg-1);
   }
 }
