--- a/src/scss/5-modules/_PollBox.scss
+++ b/src/scss/5-modules/_PollBox.scss
@@ -16,7 +16,7 @@
     "footer footer footer";
 
   .span-pollbox-question {
-    color: getColor(pb-header-text-1);
+    color: getColor(primary-1);
     font: getSize(pb-header-text-1);
   }
 
