getting data import to compontns. cleaning up some css

--- a/src/scss/4-layout/_headerLower.scss
+++ b/src/scss/4-layout/_headerLower.scss
@@ -1,5 +1,5 @@
 .header-lower-container {
-  background: getColor(header-bg-1);
+  background: getColor(primary-1-light);
   border-bottom: 1px solid grey;
   padding: 5px;
   position: fixed;
