--- a/src/scss/1-helpers/_util_variables.scss
+++ b/src/scss/1-helpers/_util_variables.scss
@@ -1,18 +1,3 @@
-$primaryColor1: #d000ff;
-$primaryColor2: #ffd000;
-$primaryColor3: #00ffd0;
-$primaryColor1light: #f0b0ff;
-$primaryColor2light: #fff0b0;
-$primaryColor3light: #b0fff0;
-$primaryColor1dark: #600076;
-$primaryColor2dark: #766000;
-$primaryColor3dark: #007660;
-$secondaryColor1: #ffffff;
-$secondaryColor2: #000000;
-$secondaryColor3: #3f3f3f;
-$secondaryColor4: #808080;
-$secondaryColor5: #dfdfdf;
-
 // COLOR SELECTIONS
 $colors: (
   primary-1: #d000ff,
@@ -40,14 +25,12 @@ $sizes: (
   padding-10px: 10px,
   padding-15px: 15px,
   padding-20px: 25px,
-  header-border-1: 20px bottom solid $secondaryColor2,
-  pb-border-1: 1px solid $primaryColor1,
-  pb-border-2: 2px dashed $primaryColor1,
-  pb-border-3: 3px solid $primaryColor1,
+  header-border-1: 20px bottom solid getColor(primary-1),
+  pb-border-1: 1px solid getColor(primary-1),
   pb-header-text-1: italic bold 20px Georgia,
-  console-border-1: 1px solid $primaryColor1,
-  resultbox-border-1: 1px solid $primaryColor1,
-  pb-container-width-small: 630px,
+  console-border-1: 1px solid getColor(primary-1),
+  resultbox-border-1: 1px solid getColor(primary-1),
+  pb-container-width-small: 630px getColor(primary-1),
 );
 
 @function getColor($color-name) {
